# linguistic-features-in-text

./: .gitignore  README.md  TypeSystem.xml  _config.yml  extractors.py  pom.xml  test_spellcheckers.py
.github/workflows/: run_tests.yml
Preprocessing/: pom.xml
Preprocessing/src/test/resources/txt/: essay_en.txt  news_de.txt
docs/: README.md  _config.yml  first-steps.md
j_lift/: pom.xml
j_lift/org.lift.api/: pom.xml
j_lift/org.lift.features/: pom.xml
j_lift/org.lift.io/: pom.xml
j_lift/org.lift.preprocessing/: pom.xml
org.lift.api/: pom.xml
org.lift.api/src/main/resources/: nominalization_de.ruta
org.lift.api/src/test/resources/xmi/: TypeSystem.xml
org.lift.features/src/main/resources/: nominalization_de.ruta
org.lift.features/src/main/resources/discourse_referent_postags/: discourse_referent_postags_de_stts.txt  discourse_referent_postags_en_ptb.txt
org.lift.features/src/main/resources/finite_verb_postags/: finite_verb_postags_de_stts
org.lift.preprocessing/: pom.xml
py_lift/: .gitignore  AnnotationRatio.py  AvgNounPhrasesPerSentence.py  AvgTokenPerSentence.py  README.md  annotators.py  dkpro.py  extractors.py  frequency.py  generate_casinfo.py  main.py  preprocessing.py  pyproject.toml  readability.py  resources.py  syntax.py  test_cas2syntax.py  util.py  visualization_examples.py  visualizer.ipynb  workbench.py
py_lift/annotators/: api.py  frequency.py  lists.py  misc.py
py_lift/data/: TypeSystem.xml  k002_s04_cas.xmi  k002_s04_corr_offsets.conllu
py_lift/examples/: pure_python_pipeline.py  visualization_streamlit.py
py_lift/py_lift/: decorators.py  dkpro.py  extractors.py  extractors_specific.py  generate_casinfo.py  model_setup.py  preprocessing.py  readability.py  resources.py  syntax.py  tree.py  util.py  visualization_examples.py  workbench.py
py_lift/py_lift/annotators/: api.py  frequency.py  lists.py  misc.py  stage.py  tree.py
py_lift/py_lift/data/: 1023_0001416.xmi  1091_0000266.xmi  TypeSystem.xml  hagen.txt.xmi  k002_s04_cas.xmi  k002_s04_corr_offsets.conllu
py_lift/py_lift/data/pos_maps/: de-stts-pos.map
py_lift/py_lift/examples/: spelling_example.ipynb  visualization_notebook.ipynb  visualizer.ipynb
py_lift/py_lift/stage/: __init__.py  cas_adapter.py  constants.py  parser.py  runner.py  stage_rules.py  udapi_node_helper.py
py_lift/py_lift/tests/: conftest.py  lift_fixtures.py  stage_fixtures.py  test_annotator_abstractness.py  test_annotator_evp_cefr.py  test_annotator_frequency.py  test_annotator_lists.py  test_annotator_misc.py  test_annotator_spelling.py  test_annotator_stage.py  test_annotator_tree.py  test_extractors.py  test_extractors_ext.py  test_extractors_generic.py  test_extractors_specific.py  test_preprocessing.py  test_readability.py  test_spellcheckers.py  test_stage_cas_adapter.py  test_stage_runner.py  test_syntax.py  test_util.py  test_workbench_preprocessing.py  util.py
py_lift/py_lift/tests/data/: dict_de.txt
py_lift/py_lift/utils/: conllu.py  core.py  tree.py
py_lift/tests/: lift_fixtures.py  test_annotator_abstractness.py  test_annotator_cefr.py  test_annotator_evp_cefr.py  test_annotator_frequency.py  test_annotator_lists.py  test_annotator_spelling.py  test_cas2syntax.py  test_extractors.py  test_extractors_generic.py  test_frequency.py  test_preprocessing.py  test_readability.py  test_spellcheckers.py  test_syntax.py  test_util.py  test_workbench_preprocessing.py
py_lift/tests/data/: testcas.xmi
py_lift/utils/: conllu.py
shared_resources/: pom.xml
shared_resources/resources/: build_all.sh
shared_resources/resources/adpositions/: adposition_postags_de_stts.txt  postposition_postags_de_stts.txt  preposition_postags_de_stts.txt
shared_resources/resources/attributive_pronouns/: attributive_pronouns_de_stts.txt
shared_resources/resources/auxiliary_verbs/: auxiliary_verbs_de.txt  auxiliary_verbs_en.txt
shared_resources/resources/easy_words/: en_BNC_easy_words.txt
shared_resources/resources/english_vocabulary_profile/: EVP.tsv  extended_EVP.tsv
shared_resources/resources/evp/: EVP.csv  EVP_extension.csv
shared_resources/resources/expletives/: expletives_de_tiger.txt
shared_resources/resources/finite_verb_postags/: sl_MULText-East_finite_verb_postags.txt
shared_resources/resources/junktors/: junktors_de_tiger.txt
shared_resources/resources/lift_resources_lists/: info.txt  poetry.toml  pyproject.toml
shared_resources/resources/lift_resources_lists/lift_resources_lists/abstractness/de/: _source.txt
shared_resources/resources/modal_verb_postags/: finite_modal_verb_postags_de_stts.txt  modal_verb_postags_de_stts.txt
shared_resources/resources/personal_pronouns/: personal_and_reflexive_pronouns_de_stts.txt
shared_resources/resources/pos_tags/: coarse_grained_pos_tags.txt  stts_pos_tags.txt
shared_resources/resources/substituting_pronouns/: substituting_pronouns_de_stts.txt
shared_resources/resources/tiger_syntax/: conjunction_labels.txt  subject_labels.txt
shared_resources/resources/verb_postags/: nonfinite_verb_postags_de_stts.txt  verb_postags_de_stts.txt
src/main/resources/: nominalization_de.ruta
src/main/resources/config/: tagset_mappings
src/test/resources/xmi/: TypeSystem.xml  news_de.txt.xmi
(+264 files in other folders)
