[tool.poetry]
name = "py_lift"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
dkpro-cassis = "^0.10.1"
pytest = "^7.4.3"
pyspellchecker = "^0.8.1"
textstat = "^0.7.3"
pytest-cov = "^4.1.0"
wordfreq = "^3.1.1"
pandas = "^2.2.0"
polars = "1.33.1"
udapi = "^0.5.1"
pyconll = "^3.2.0"
pyarrow = "^15.0.0"
setuptools = "80.4.0"
cas-visualizer = "^0.1.5"
lingua-language-detector = "^2.1.1"
jupyter = "^1.1.1"
Deprecated = "^1.2.18"
# lift-resources-lists = {path = "../shared_resources/resources/lift_resources_lists", develop = true}
lift-resources-lists = {url = "https://pypi.cats.fernuni-hagen.de/packages/lift_resources_lists-0.1.0-py3-none-any.whl#sha256=12e49b03546a434753b2fc637cc0e57dd0b44bb4a44303b6a2a94897b791f3c1" }
streamlit = "^1.50.0"
spacy = "^3.8.7"
rwse-checker = "^0.0.4"
#rwse-checker = {path = "../../rwse-checker/", develop = true}
de-core-news-lg = {url = 'https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl'}
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
fr-core-news-lg = {url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_lg-3.8.0/fr_core_news_lg-3.8.0-py3-none-any.whl" }
sl-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/sl_core_news_sm-3.8.0/sl_core_news_sm-3.8.0-py3-none-any.whl" } 
tr-core-news-md = {url = "https://pypi.cats.fernuni-hagen.de/packages/tr_core_news_md-1.0-py3-none-any.whl" }

[[tool.poetry.source]]
name = "catalpa-pypi"
url = "https://pypi.cats.fernuni-hagen.de/"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "py_lift"
]
