[project]
name = "py_lift"
version = "0.1.0"
description = "Linguistic feature extraction and annotation utilities for text."
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  { name = "PyLift Contributors" }
]
dependencies = [
  "dkpro-cassis>=0.10.1,<0.11.0",
  "pyspellchecker>=0.8.1,<0.9.0",
  "textstat>=0.7.3,<0.8.0",
  "wordfreq>=3.1.1,<4.0.0",
  "pandas>=2.2.0,<3.0.0",
  "polars==1.33.1",
  "udapi>=0.5.1,<0.6.0",
  "pyconll>=3.2.0,<4.0.0",
  "lingua-language-detector>=2.1.1,<3.0.0",
  "spacy>=3.8.7,<4.0.0",
  "rwse-checker>=0.0.4,<0.0.5",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
setuptools = "80.4.0"

[tool.poetry.group.examples.dependencies]
streamlit = "^1.50.0"
jupyter = "^1.1.1"
cas-visualizer = "^0.1.5"

[[tool.poetry.source]]
name = "catalpa-pypi"
url = "https://pypi.cats.fernuni-hagen.de/"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "py_lift"
]
